removed text overlapping bug. completed the credits file

--- a/styles/style.css
+++ b/styles/style.css
@@ -53,11 +53,10 @@ nav {
   width: 90vw;
   height: 75vh;
   border-radius: 9px;
-  display: grid;
-  justify-content: end;
-  row-gap: 10vh;
+  /* display: grid; */
+  /* justify-content: end;
   grid-template-columns: 50% 50%;
-  grid-template-rows: auto;
+  grid-template-rows: auto; */
   overflow-y: scroll;
 }
 
@@ -95,12 +94,7 @@ footer > form > div {
 }
 
 .sidebar {
-  justify-self: flex-start;
-  height: 100%;
-  width: 3%;
-}
-
-.sidebar {
+  font-size: medium;
   height: 100vh;
   width: 40vw;
 
